--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   }
   .wrap{max-width:1290px;margin:0 auto;padding:16px}
 
+  /* ====== HEADER ====== */
   .hero{
     position:relative; min-height:78px; border-radius:18px; padding:12px 16px;
     display:flex; align-items:center; justify-content:center; color:#fff;
@@ -28,7 +29,6 @@
   }
   .hero .center-logo{height:42px;object-fit:contain;filter:drop-shadow(0 2px 6px #0002)}
   .hero .logo{width:120px;height:auto;object-fit:contain;filter:drop-shadow(0 2px 6px #0002)}
-  .left{position:absolute;left:14px;top:50%;transform:translateY(-50%)}
   .right-img{position:absolute;right:14px;top:50%;transform:translateY(-50%)}
   .tools{position:absolute;right:148px;top:50%;transform:translateY(-50%);display:flex;gap:10px}
   .iconbtn{
@@ -39,8 +39,28 @@
   .icon-note{background:#ffd95e} .icon-calc{background:#60a5fa}
   .iconbtn svg{display:block}
 
+  /* ====== TRIO DE LOGOS (esquerda da barra) ====== */
+  .left-logos{
+    position:absolute; left:14px; top:50%; transform:translateY(-50%);
+    display:flex; align-items:center; gap:8px;
+    padding:6px 10px; border-radius:14px;
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.25);
+    backdrop-filter: blur(2px);
+    box-shadow:0 6px 16px rgba(0,0,0,.15);
+  }
+  .left-logos .logo-mini{ height:22px; object-fit:contain; filter:drop-shadow(0 1px 2px #0002) }
+  .left-logos .plus{ color:#fff; opacity:.9; font-weight:800; line-height:1; font-size:14px }
+
+  /* ====== GRID / CARDS ====== */
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:14px}
-  @media (max-width:980px){ .grid{grid-template-columns:1fr} .right-img{display:none} .tools{right:14px} }
+  @media (max-width:980px){
+    .grid{grid-template-columns:1fr}
+    .right-img{display:none}
+    .tools{right:14px}
+    .left-logos{ left:10px; padding:5px 8px }
+    .left-logos .logo-mini{ height:18px }
+  }
 
   .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:10px;box-shadow:var(--card-shadow)}
   .tag{display:inline-flex;align-items:center;gap:8px;background:var(--tag);color:var(--tag-ink);
@@ -93,9 +113,19 @@
 </head>
 <body>
   <div class="wrap">
+    <!-- HEADER -->
     <div class="hero">
-      <img class="logo left" src="icon.png" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ric-crion/main/icon.png';" alt="Logo esquerdo">
+      <!-- Pacote de 3 logos à esquerda -->
+      <div class="left-logos" aria-label="logos parceiros">
+        <img src="Affix.png"   alt="Affix"       class="logo-mini">
+        <span class="plus">+</span>
+        <img src="Alter.png"   alt="Alter"       class="logo-mini">
+        <span class="plus">+</span>
+        <img src="conecta.png" alt="ConectaPlan" class="logo-mini">
+      </div>
+
       <img class="center-logo" src="RICai.png" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ric-crion/main/RICai.png';" alt="RIC AI CRION">
+
       <div class="tools">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
@@ -111,6 +141,7 @@
           </svg>
         </button>
       </div>
+
       <img class="logo right-img" src="icon2.png" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ric-crion/main/icon2.png';" alt="Logo direito">
     </div>
 
@@ -248,7 +279,7 @@ function call(endpoint, payload){
 }
 
 document.addEventListener('DOMContentLoaded', () => {
-  // Post-it
+  /* Post-it */
   const noteWrap = $('#noteWrap'), noteArea = $('#noteArea');
   $('#toggleNote').onclick = ()=>{ noteWrap.style.display = noteWrap.style.display ? "" : "block"; if(noteWrap.style.display) noteArea.focus(); };
   $('#clearNote').onclick = ()=>{ noteArea.value=""; localStorage.removeItem('ric_note'); };
@@ -256,7 +287,7 @@ document.addEventListener('DOMContentLoaded', () => {
   noteArea.value = localStorage.getItem('ric_note') || "";
   noteArea.addEventListener('input', ()=> localStorage.setItem('ric_note', noteArea.value));
 
-  // Calculadora
+  /* Calculadora */
   $('#toggleCalc').onclick = ()=>{ $('#calcWrap').style.display = $('#calcWrap').style.display? "" : "block"; };
   $('#closeCalc').onclick = ()=>{ $('#calcWrap').style.display="none"; };
   const refresh = v => $('#scr').textContent = v;
@@ -276,7 +307,7 @@ document.addEventListener('DOMContentLoaded', () => {
   };
   $('#keys').addEventListener('click', e=>{ const k=e.target.dataset.k; if(k) press(k); });
 
-  // Alerta
+  /* Alerta */
   $('#btnAlert').addEventListener('click', async ()=>{
     const box=$('#alertBox'), msg=$('#alertMsg'), resp=$('#alertResp');
     show(box,false); show($('#alertBusy'),true);
@@ -291,7 +322,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#alertBusy'),false); }
   });
 
-  // Sites
+  /* Sites */
   $('#btnSites').addEventListener('click', async ()=>{
     const q=($('#qSites').value||'').trim();
     if(!q){ $('#outSites').textContent='Digite a pergunta.'; return; }
@@ -306,7 +337,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#sitesBusy'),false); }
   });
 
-  // PDFs (mantidos ocultos para compatibilidade)
+  /* PDFs (mantidos ocultos para compatibilidade) */
   const btnPDF = $('#btnPDF'), qPDF = $('#qPDF');
   if(btnPDF){ btnPDF.addEventListener('click', doPDF); }
   if(qPDF){ qPDF.addEventListener('keydown', e=>{ if(e.key==='Enter') doPDF(); }); }
@@ -345,7 +376,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#pdfBusy'),false); }
   }
 
-  // CRION
+  /* CRION */
   $('#btnCRION').addEventListener('click', doCRION);
   $('#qCRION').addEventListener('keydown', e=>{ if(e.key==='Enter') doCRION(); });
   const btnRe = $('#btnReIdxCRION');
