--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 
       <div class="tools">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
             <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#1f2937" stroke-width="2"/>
           </svg>
         </button>
         <button id="toggleCalc" type="button" class="iconbtn icon-calc" title="Calculadora">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <rect x="4" y="3" width="16" height="18" rx="2" stroke="#0b2555" stroke-width="2" fill="#dbeafe"/>
             <rect x="7" y="6" width="10" height="3" rx="1" fill="#0b2555"/>
             <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#0b2555" stroke-width="2"/>
@@ -262,51 +262,65 @@
   </div>
 
 <script>
+/* ======= CONFIG ======= */
 const APP_URL = "https://script.google.com/macros/s/AKfycbxnTEhSw1u5Ib0jCqJsURoZM30VfCpfeqKqKvYpXdKgJDUPrw8Q8hScbSzw4zVkI7u0rw/exec";
-const $ = s => document.querySelector(s);
-const show = (el, on=true)=>{ if(!el) return; el.style.display = on? '' : 'none'; };
-function esc(s){ return String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;"); }
-function cleanName(n){ return String(n||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig,''); }
-function link(url, txt){ return `<a href="${url}" target="_blank" rel="noopener">${esc(txt||url)}</a>`; }
+
+/* ======= HELPERS ======= */
+const $  = sel => document.querySelector(sel);
+const $$ = sel => Array.from(document.querySelectorAll(sel));
+const show = (el, on=true)=>{ if(!el) return; el.style.display = on? "" : "none"; };
+const esc  = s => String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;");
+const cleanName = n => String(n||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig,'');
+const link = (url, txt) => `<a href="${url}" target="_blank" rel="noopener">${esc(txt||url)}</a>`;
 function humanSize(b){ if(!b||b<=0) return "—"; const u=["B","KB","MB","GB"]; let i=0; while(b>=1024&&i<u.length-1){ b/=1024; i++; } return b.toFixed(1)+" "+u[i]; }
+
+/* ======= CHAMADAS GAS ======= */
 function call(endpoint, payload){
   const url = APP_URL + "?fn=" + encodeURIComponent(endpoint);
-  return fetch(url, { method:"POST", headers:{ "Content-Type":"text/plain" }, body: JSON.stringify(payload || {}) })
-         .then(r=>{ if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); });
+  return fetch(url, {
+    method:"POST",
+    headers:{ "Content-Type":"text/plain" },
+    body: JSON.stringify(payload || {})
+  }).then(r=>{ if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); });
 }
 
+/* ======= APP ======= */
 document.addEventListener('DOMContentLoaded', () => {
   /* Post-it */
   const noteWrap = $('#noteWrap'), noteArea = $('#noteArea');
-  $('#toggleNote').onclick = ()=>{ noteWrap.style.display = noteWrap.style.display ? "" : "block"; if(noteWrap.style.display) noteArea.focus(); };
-  $('#clearNote').onclick = ()=>{ noteArea.value=""; localStorage.removeItem('ric_note'); };
-  $('#closeNote').onclick = ()=>{ noteWrap.style.display="none"; };
+  $('#toggleNote')?.addEventListener('click', ()=>{
+    const on = noteWrap.style.display !== "block"; noteWrap.style.display = on? "block" : "";
+    if(on) noteArea.focus();
+  });
+  $('#clearNote')?.addEventListener('click', ()=>{ noteArea.value=""; localStorage.removeItem('ric_note'); });
+  $('#closeNote')?.addEventListener('click', ()=>{ noteWrap.style.display="none"; });
   noteArea.value = localStorage.getItem('ric_note') || "";
   noteArea.addEventListener('input', ()=> localStorage.setItem('ric_note', noteArea.value));
 
   /* Calculadora */
-  $('#toggleCalc').onclick = ()=>{ $('#calcWrap').style.display = $('#calcWrap').style.display? "" : "block"; };
-  $('#closeCalc').onclick = ()=>{ $('#calcWrap').style.display="none"; };
-  const refresh = v => $('#scr').textContent = v;
+  $('#toggleCalc')?.addEventListener('click', ()=>{ $('#calcWrap').style.display = $('#calcWrap').style.display? "" : "block"; });
+  $('#closeCalc')?.addEventListener('click', ()=>{ $('#calcWrap').style.display="none"; });
+  const scr = $('#scr');
   const calc = { buf:"0", op:null, mem:0, fresh:true };
-  const press = k=>{
-    if(/\d/.test(k)){ calc.buf = (calc.fresh||calc.buf==="0")? k : calc.buf+k; calc.fresh=false; return refresh(calc.buf); }
+  function refresh(){ scr.textContent = calc.buf; }
+  function press(k){
+    if(/\d/.test(k)){ calc.buf = (calc.fresh||calc.buf==="0")? k : calc.buf+k; calc.fresh=false; return refresh(); }
     if(k==="00"){ press("0"); return press("0"); }
-    if(k==="."){ if(!calc.buf.includes(".")) calc.buf += "."; calc.fresh=false; return refresh(calc.buf); }
-    if(k==="C"){ calc.buf="0"; calc.op=null; calc.fresh=true; return refresh(calc.buf); }
-    if(k==="±"){ if(calc.buf!=="0") calc.buf = calc.buf.startsWith("-")? calc.buf.slice(1):"-"+calc.buf; return refresh(calc.buf); }
-    if(k==="%"){ calc.buf = String(parseFloat(calc.buf)/100); return refresh(calc.buf); }
+    if(k==="."){ if(!calc.buf.includes(".")) calc.buf += "."; calc.fresh=false; return refresh(); }
+    if(k==="C"){ calc.buf="0"; calc.op=null; calc.fresh=true; return refresh(); }
+    if(k==="±"){ if(calc.buf!=="0") calc.buf = calc.buf.startsWith("-")? calc.buf.slice(1):"-"+calc.buf; return refresh(); }
+    if(k==="%"){ calc.buf = String(parseFloat(calc.buf)/100); return refresh(); }
     if("+-*/".includes(k)){ calc.mem=parseFloat(calc.buf); calc.op=k; calc.fresh=true; return; }
     if(k==="=" && calc.op){ const a=calc.mem, b=parseFloat(calc.buf);
       let v = 0; switch(calc.op){case "+":v=a+b;break;case "-":v=a-b;break;case "*":v=a*b;break;case "/":v=b===0? "Erro" : a/b;break;}
-      calc.buf = String(v); calc.op=null; calc.fresh=true; return refresh(calc.buf);
+      calc.buf = String(v); calc.op=null; calc.fresh=true; return refresh();
     }
-  };
-  $('#keys').addEventListener('click', e=>{ const k=e.target.dataset.k; if(k) press(k); });
+  }
+  $('#keys')?.addEventListener('click', e=>{ const k=e.target?.dataset?.k; if(k) press(k); });
 
-  /* Alerta */
-  $('#btnAlert').addEventListener('click', async ()=>{
-    const box=$('#alertBox'), msg=$('#alertMsg'), resp=$('#alertResp']);
+  /* ALERTA */
+  $('#btnAlert')?.addEventListener('click', async ()=>{
+    const box=$('#alertBox'), msg=$('#alertMsg'), resp=$('#alertResp');
     show(box,false); show($('#alertBusy'),true);
     try{
       const r = await call('getalert',{});
@@ -319,8 +333,10 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#alertBusy'),false); }
   });
 
-  /* Sites */
-  $('#btnSites').addEventListener('click', async ()=>{
+  /* SITES OFICIAIS */
+  $('#btnSites')?.addEventListener('click', doSites);
+  $('#qSites')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doSites(); });
+  async function doSites(){
     const q=($('#qSites').value||'').trim();
     if(!q){ $('#outSites').textContent='Digite a pergunta.'; return; }
     show($('#sitesBusy'),true); $('#outSites').textContent='—';
@@ -332,16 +348,16 @@ document.addEventListener('DOMContentLoaded', () => {
       $('#outSites').innerHTML = html;
     }catch(e){ $('#outSites').textContent='Erro: '+e.message;
     }finally{ show($('#sitesBusy'),false); }
-  });
+  }
 
   /* PDFs (mantidos ocultos para compatibilidade) */
-  const btnPDF = $('#btnPDF'), qPDF = $('#qPDF');
-  if(btnPDF){ btnPDF.addEventListener('click', doPDF); }
-  if(qPDF){ qPDF.addEventListener('keydown', e=>{ if(e.key==='Enter') doPDF(); }); }
+  $('#btnPDF')?.addEventListener('click', doPDF);
+  $('#qPDF')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doPDF(); });
   async function doPDF(){
-    const q=(qPDF?.value||'').trim();
-    if(!q){ const s=$('#pdfStatus'); if(s) s.textContent='Digite um termo.'; return; }
-    show($('#pdfBusy'),true); const st=$('#pdfStatus'); if(st) st.textContent='Listando arquivos...'; const list=$('#pdfList'); if(list) list.innerHTML="";
+    const q=($('#qPDF')?.value||'').trim();
+    const st=$('#pdfStatus'), list=$('#pdfList');
+    if(!q){ if(st) st.textContent='Digite um termo.'; return; }
+    show($('#pdfBusy'),true); if(st) st.textContent='Listando arquivos...'; if(list) list.innerHTML="";
     try{
       const res = await call('searchindexed',{q});
       if(!res || res.ok===false){ if(st) st.textContent='Erro ao buscar: '+(res&&res.message?res.message:''); return; }
@@ -374,15 +390,14 @@ document.addEventListener('DOMContentLoaded', () => {
   }
 
   /* CRION */
-  $('#btnCRION').addEventListener('click', doCRION);
-  $('#qCRION').addEventListener('keydown', e=>{ if(e.key==='Enter') doCRION(); });
-  const btnRe = $('#btnReIdxCRION');
-  if(btnRe){ btnRe.addEventListener('click', async ()=>{
+  $('#btnCRION')?.addEventListener('click', doCRION);
+  $('#qCRION')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doCRION(); });
+  $('#btnReIdxCRION')?.addEventListener('click', async ()=>{
     $('#crionStatus').textContent='Reindexando CRION…'; show($('#crionBusy'),true);
     try{ const r=await call('reindexcrion',{}); $('#crionStatus').textContent="Index CRION: "+(r && r.ok ? "OK" : "Falhou"); }
     catch(e){ $('#crionStatus').textContent='Erro: '+e.message; }
     finally{ show($('#crionBusy'),false); }
-  });}
+  });
   async function doCRION(){
     const q=($('#qCRION').value||'').trim();
     if(!q){ $('#crionStatus').textContent='Digite um termo.'; return; }
