--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-br">
 <head>
@@ -28,13 +27,17 @@
     background:linear-gradient(135deg,var(--brand),var(--brand2));
     box-shadow:0 24px 56px rgba(40,130,187,.22);
   }
-  .hero .logo{width:120px;height:auto;object-fit:contain;filter:drop-shadow(0 2px 6px #0002)}
+  .logo{height:38px; width:auto; object-fit:contain; filter:drop-shadow(0 2px 4px #0002)}
   .left-img{
     position:absolute; left:14px; top:50%; transform:translateY(-50%);
-    height:38px; object-fit:contain; filter:drop-shadow(0 2px 4px #0002);
   }
-  .right-img{position:absolute;right:14px;top:50%;transform:translateY(-50%)}
-  .tools{position:absolute;right:148px;top:50%;transform:translateY(-50%);display:flex;gap:10px}
+
+  /* Dock da direita: Post-it → Calculadora → HDS (alinhados na mesma linha) */
+  .right-dock{
+    position:absolute; right:14px; top:50%; transform:translateY(-50%);
+    display:flex; align-items:center; gap:12px; flex-wrap:nowrap;
+  }
+  .right-dock .hds{height:38px; width:auto; object-fit:contain; filter:drop-shadow(0 2px 4px #0002)}
   .iconbtn{
     width:36px;height:36px;border-radius:12px;border:1px solid #ffffff40; display:grid;place-items:center;
     cursor:pointer;backdrop-filter:blur(4px); transition:.15s; box-shadow:0 6px 14px rgba(0,0,0,.15)
@@ -47,9 +50,10 @@
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:14px}
   @media (max-width:980px){
     .grid{grid-template-columns:1fr}
-    .right-img{display:none}
-    .tools{right:14px}
-    .left-img{left:10px;height:22px}
+    .right-dock{right:12px}
+    .left-img{left:10px}
+    .right-dock .hds{height:28px}
+    .iconbtn{width:32px;height:32px}
   }
 
   .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:10px;box-shadow:var(--card-shadow)}
@@ -87,12 +91,11 @@
   .bar:before{content:"";position:absolute;inset:0;background:linear-gradient(90deg,#c7b8ff,#a78bfa,#93c5fd);animation:load 1.2s infinite}
   @keyframes load{0%{left:-100%;right:100%}50%{left:0;right:0}100%{left:100%;right:-100%}}
 
-  /* Banner no lugar dos PDFs */
-  .banner{
-    display:block; width:100%; aspect-ratio:16/9; object-fit:cover;
-    border-radius:12px; box-shadow:var(--card-shadow); border:1px solid #e7eaf3;
+  /* Figura flutuante (rr.png) — transparente, sem “quadrado” */
+  .ric-float{
+    display:block; width:100%; height:auto; object-fit:contain; object-position:left center;
+    background:transparent; border:0; box-shadow:none; filter:drop-shadow(0 12px 28px rgba(2,8,23,.10));
   }
-  #pdfCard .tag{ display:none; }
 
   footer{margin:18px 0 6px;text-align:center}
   .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
@@ -103,13 +106,13 @@
   <div class="wrap">
     <!-- HEADER -->
     <div class="hero">
-      <!-- esquerda -->
-      <img class="left-img" src="icon2.png"
+      <!-- esquerda (centro fica vazio) -->
+      <img class="left-img logo" src="icon2.png"
            onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';"
            alt="Logo esquerdo">
 
-      <!-- controles -->
-      <div class="tools">
+      <!-- direita: Post-it → Calculadora → HDS -->
+      <div class="right-dock">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
@@ -123,12 +126,10 @@
             <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#0b2555" stroke-width="2"/>
           </svg>
         </button>
+        <img class="hds" src="HDS.png"
+             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
+             alt="HDS">
       </div>
-
-      <!-- direita -->
-      <img class="logo right-img" src="HDS.png"
-           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
-           alt="HDS">
     </div>
 
     <!-- WIDGETS -->
@@ -202,11 +203,13 @@
         <div id="outSites" class="out">—</div>
       </section>
 
-      <!-- PDFs (DESATIVADO → somente banner, sem textos) -->
+      <!-- “PDFs” (apenas imagem flutuante rr.png) -->
       <section class="card" id="pdfCard">
         <div class="tag">PDFs</div>
-        <img src="v2.jpeg" alt="HDSTEC — banner" class="banner">
-
+        <img src="rr.png"
+             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
+             alt="RIC — assistente" class="ric-float">
+        <!-- elementos de busca mantidos ocultos para compatibilidade -->
         <div class="row" style="display:none">
           <input id="qPDF" class="input" placeholder="Ex.: Affix, Coparticipação, Carência 30 dias">
           <button id="btnPDF" type="button" class="btn btn-search" style="min-width:112px">Pesquisar</button>
@@ -338,7 +341,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#sitesBusy'),false); }
   }
 
-  /* PDFs (mantidos ocultos para compatibilidade) */
+  /* PDFs (mantidos ocultos para compatibilidade, mas imagem rr.png já exibe o “banner”) */
   $('#btnPDF')?.addEventListener('click', doPDF);
   $('#qPDF')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doPDF(); });
   async function doPDF(){
