--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
     background:linear-gradient(135deg,var(--brand),var(--brand2));
     box-shadow:0 24px 56px rgba(40,130,187,.22);
   }
-  .logo{height:38px; width:auto; object-fit:contain; filter:drop-shadow(0 2px 4px #0002)}
+  .hero .logo{width:120px;height:auto;object-fit:contain;filter:drop-shadow(0 2px 6px #0002)}
   .left-img{
     position:absolute; left:14px; top:50%; transform:translateY(-50%);
+    height:38px; object-fit:contain; filter:drop-shadow(0 2px 4px #0002);
   }
-
-  /* Dock da direita: Post-it → Calculadora → HDS (alinhados na mesma linha) */
-  .right-dock{
-    position:absolute; right:14px; top:50%; transform:translateY(-50%);
-    display:flex; align-items:center; gap:12px; flex-wrap:nowrap;
+  .right-img{position:absolute;right:14px;top:50%;transform:translateY(-50%)}
+  .tools{
+    position:absolute; right:148px; top:50%; transform:translateY(-50%);
+    display:flex; gap:10px; align-items:center;
   }
-  .right-dock .hds{height:38px; width:auto; object-fit:contain; filter:drop-shadow(0 2px 4px #0002)}
   .iconbtn{
     width:36px;height:36px;border-radius:12px;border:1px solid #ffffff40; display:grid;place-items:center;
     cursor:pointer;backdrop-filter:blur(4px); transition:.15s; box-shadow:0 6px 14px rgba(0,0,0,.15)
@@ -50,10 +49,9 @@
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-top:14px}
   @media (max-width:980px){
     .grid{grid-template-columns:1fr}
-    .right-dock{right:12px}
-    .left-img{left:10px}
-    .right-dock .hds{height:28px}
-    .iconbtn{width:32px;height:32px}
+    .right-img{display:none}
+    .tools{right:14px}
+    .left-img{left:10px;height:22px}
   }
 
   .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:10px;box-shadow:var(--card-shadow)}
@@ -91,11 +89,10 @@
   .bar:before{content:"";position:absolute;inset:0;background:linear-gradient(90deg,#c7b8ff,#a78bfa,#93c5fd);animation:load 1.2s infinite}
   @keyframes load{0%{left:-100%;right:100%}50%{left:0;right:0}100%{left:100%;right:-100%}}
 
-  /* Figura flutuante (rr.png) — transparente, sem “quadrado” */
-  .ric-float{
-    display:block; width:100%; height:auto; object-fit:contain; object-position:left center;
-    background:transparent; border:0; box-shadow:none; filter:drop-shadow(0 12px 28px rgba(2,8,23,.10));
-  }
+  /* ====== SLOT LIVRE (imagem flutuando, sem card) ====== */
+  .free-card{background:transparent;border:0;box-shadow:none;padding:0}
+  .free-pad{padding:10px}            /* mantém o “encaixe” do antigo card, sem mostrar quadrado */
+  .rr-img{display:block;width:100%;height:auto;object-fit:contain;pointer-events:none}
 
   footer{margin:18px 0 6px;text-align:center}
   .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
@@ -106,13 +103,13 @@
   <div class="wrap">
     <!-- HEADER -->
     <div class="hero">
-      <!-- esquerda (centro fica vazio) -->
-      <img class="left-img logo" src="icon2.png"
+      <!-- esquerda (CRION) -->
+      <img class="left-img" src="icon2.png"
            onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/icon2.png';"
            alt="Logo esquerdo">
 
-      <!-- direita: Post-it → Calculadora → HDS -->
-      <div class="right-dock">
+      <!-- ícones à direita: Post-it → Calculadora → HDS -->
+      <div class="tools">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
@@ -126,10 +123,12 @@
             <path d="M8 12h2M8 16h2M12 12h2M12 16h2M16 12h2M16 16h2" stroke="#0b2555" stroke-width="2"/>
           </svg>
         </button>
-        <img class="hds" src="HDS.png"
-             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
-             alt="HDS">
       </div>
+
+      <!-- direita (HDS) -->
+      <img class="logo right-img" src="HDS.png"
+           onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/HDS.png';"
+           alt="HDS TEC">
     </div>
 
     <!-- WIDGETS -->
@@ -203,24 +202,12 @@
         <div id="outSites" class="out">—</div>
       </section>
 
-      <!-- “PDFs” (apenas imagem flutuante rr.png) -->
-      <section class="card" id="pdfCard">
-        <div class="tag">PDFs</div>
-        <img src="rr.png"
-             onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
-             alt="RIC — assistente" class="ric-float">
-        <!-- elementos de busca mantidos ocultos para compatibilidade -->
-        <div class="row" style="display:none">
-          <input id="qPDF" class="input" placeholder="Ex.: Affix, Coparticipação, Carência 30 dias">
-          <button id="btnPDF" type="button" class="btn btn-search" style="min-width:112px">Pesquisar</button>
-        </div>
-        <div class="hint" id="pdfBusy" style="display:none">
-          <div class="busy"><div class="spinner"></div><div>Listando arquivos...</div></div>
-          <div class="bar" style="margin-top:6px"></div>
-        </div>
-        <div class="out" id="pdfBox" style="display:none">
-          <div id="pdfStatus" class="hint" style="margin-top:0">—</div>
-          <ul id="pdfList" class="list"></ul>
+      <!-- SLOT LIVRE → imagem PNG flutuando -->
+      <section class="free-card">
+        <div class="free-pad">
+          <img class="rr-img" src="rr.png"
+               onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/HD-TECH-hash/Ricai-crion-operacao/main/rr.png';"
+               alt="Mascote RIC acenando">
         </div>
       </section>
 
@@ -339,45 +326,6 @@ document.addEventListener('DOMContentLoaded', () => {
       $('#outSites').innerHTML = html;
     }catch(e){ $('#outSites').textContent='Erro: '+e.message;
     }finally{ show($('#sitesBusy'),false); }
-  }
-
-  /* PDFs (mantidos ocultos para compatibilidade, mas imagem rr.png já exibe o “banner”) */
-  $('#btnPDF')?.addEventListener('click', doPDF);
-  $('#qPDF')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doPDF(); });
-  async function doPDF(){
-    const q=($('#qPDF')?.value||'').trim();
-    const st=$('#pdfStatus'), list=$('#pdfList');
-    if(!q){ if(st) st.textContent='Digite um termo.'; return; }
-    show($('#pdfBusy'),true); if(st) st.textContent='Listando arquivos...'; if(list) list.innerHTML="";
-    try{
-      const res = await call('searchindexed',{q});
-      if(!res || res.ok===false){ if(st) st.textContent='Erro ao buscar: '+(res&&res.message?res.message:''); return; }
-      const items=res.items||[]; if(st) st.textContent=`Resultados: ${items.length}`;
-      const frag=document.createDocumentFragment();
-      items.forEach((it,idx)=>{
-        const li=document.createElement('li'); li.className='item'; li.id='pdf_'+idx;
-        const meta = `<div class="hint">Tamanho: ${humanSize(it.size||0)} • Atualizado: ${it.updated? new Date(it.updated).toLocaleString(): "—"}</div>`;
-        li.innerHTML=`<div><b>${esc(cleanName(it.name))}</b> • ${link(it.url,'Abrir')}</div>${meta}
-                      <div class="hint" id="snip_pdf_${idx}">Carregando prévias…</div>`;
-        frag.appendChild(li);
-      });
-      if(list) list.appendChild(frag);
-      if(items.length){
-        let from=0;
-        while(from < items.length){
-          const r = await call('fetchindexedsnippets',{sessionId:res.sessionId, from, limit:6});
-          (r.items||[]).forEach(row=>{
-            const el=document.getElementById('snip_pdf_'+row.index);
-            if(el) el.innerHTML=(row.snippets && row.snippets.length)
-              ? row.snippets.map(s=>`<div class="snip">${esc(s)}</div>`).join("")
-              : '<span class="hint">—</span>';
-          });
-          from = r.to;
-        }
-        if(st) st.textContent += " • prévias completas";
-      }
-    }catch(e){ if(st) st.textContent='Erro: '+e.message;
-    }finally{ show($('#pdfBusy'),false); }
   }
 
   /* CRION */
