--- a/index.html
+++ b/index.html
@@ -91,9 +91,18 @@
 
   /* ====== SLOT LIVRE (imagem flutuando, sem card) ====== */
   .free-card{background:transparent;border:0;box-shadow:none;padding:0}
-  .free-pad{padding:10px}            /* mantém o “encaixe” do antigo card, sem mostrar quadrado */
+  .free-pad{padding:10px}
   .rr-img{display:block;width:100%;height:auto;object-fit:contain;pointer-events:none}
 
+  /* ====== AFFIX PDFs (lista + prévia leve) ====== */
+  .pdf-row{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
+  .pdf-row b{font-size:14px}
+  .pdf-actions{display:flex;gap:8px}
+  .pdf-actions .link{font-size:12px;font-weight:800;padding:6px 10px;border-radius:10px;border:1px solid var(--line);background:#f7f8fd;cursor:pointer}
+  .pdf-actions .link:hover{transform:translateY(-1px)}
+  .preview{margin-top:8px;border:1px solid var(--line);border-radius:10px;overflow:hidden;display:none}
+  .preview iframe{width:100%;height:420px;border:0;background:#fff}
+  
   footer{margin:18px 0 6px;text-align:center}
   .copyright{font-size:12px;font-weight:700;color:#2882bb;padding:10px 12px;border-radius:10px;background:rgba(40,130,187,.06);display:inline-block}
   .credit{margin-top:4px;font-size:6px;color:#cfd6e3;display:block}
@@ -112,7 +121,7 @@
       <div class="tools">
         <button id="toggleNote" type="button" class="iconbtn icon-note" title="Post-it">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
+            <path d="M8 3h8a3 3 0 0 1 3 3v7l-7 7H8a3 3 0 0 1 3-3V6a3 3 0 0 1 3-3Z" stroke="#1f2937" stroke-width="2" fill="#fde68a"/>
             <path d="M19 13h-4a3 3 0 0 0-3 3v4" stroke="#1f2937" stroke-width="2"/>
           </svg>
         </button>
@@ -187,16 +196,16 @@
         </div>
       </section>
 
-      <!-- SITES OFICIAIS -->
+      <!-- SITES OFICIAIS + PDFs AFFIX -->
       <section class="card">
         <div class="tag">SITES OFICIAIS</div>
         <h2>CRION COMERCIAL (AFFIX, ALTER e CONECTA PLAN)</h2>
         <div class="row" style="margin-top:6px">
-          <input id="qSites" class="input" placeholder="Digite sua pergunta .....">
+          <input id="qSites" class="input" placeholder="Digite sua pergunta ….. (vazio = listar PDFs AFFIX)">
           <button id="btnSites" type="button" class="btn btn-search">Pesquisar</button>
         </div>
         <div class="hint" id="sitesBusy" style="display:none">
-          <div class="busy"><div class="spinner"></div><div>Pesquisando...</div></div>
+          <div class="busy"><div class="spinner"></div><div>Processando…</div></div>
           <div class="bar" style="margin-top:6px"></div>
         </div>
         <div id="outSites" class="out">—</div>
@@ -251,6 +260,7 @@ const esc  = s => String(s||"").replaceAll("&","&amp;").replaceAll("<","&lt;").r
 const cleanName = n => String(n||'').replace(/^(OCR_TMP_|TMP_SLIDES_)+/ig,'');
 const link = (url, txt) => `<a href="${url}" target="_blank" rel="noopener">${esc(txt||url)}</a>`;
 function humanSize(b){ if(!b||b<=0) return "—"; const u=["B","KB","MB","GB"]; let i=0; while(b>=1024&&i<u.length-1){ b/=1024; i++; } return b.toFixed(1)+" "+u[i]; }
+const norm = s => String(s||"").normalize("NFD").replace(/\p{Diacritic}/gu,"").toLowerCase();
 
 /* ======= CHAMADAS GAS ======= */
 function call(endpoint, payload){
@@ -260,6 +270,95 @@ function call(endpoint, payload){
     headers:{ "Content-Type":"text/plain" },
     body: JSON.stringify(payload || {})
   }).then(r=>{ if(!r.ok) throw new Error("HTTP "+r.status); return r.json(); });
+}
+
+/* ======= AFFIX PDFs (carrega do repositório) ======= */
+const GH_OWNER="HD-TECH-hash";
+const GH_REPO ="Ricai-crion-operacao";
+const AFFIX_DIR="data/affix/raw";
+const API_LIST = `https://api.github.com/repos/${GH_OWNER}/${GH_REPO}/contents/${AFFIX_DIR}?ref=main`;
+const MANIFEST_RAW = `https://raw.githubusercontent.com/${GH_OWNER}/${GH_REPO}/main/data/affix/manifest.json`;
+let AFFIX_FILES = null;
+
+async function loadAffixIndex(){
+  if(Array.isArray(AFFIX_FILES)) return AFFIX_FILES;
+  try{
+    const list = await fetch(API_LIST,{headers:{'Accept':'application/vnd.github+json'}}).then(r=>r.json());
+    const files = (Array.isArray(list)?list:[]).filter(it=>it.type==="file" && /\.pdf$/i.test(it.name))
+      .map(it=>({name:it.name, size:it.size||0, url:it.download_url, path:it.path, updated:null, source:null}));
+    // tenta enriquecer com manifest (se existir)
+    try{
+      const manResp = await fetch(MANIFEST_RAW);
+      if(manResp.ok){
+        const man = await manResp.json();
+        // formatos tolerantes: {items:[{dest,src,updated,size}]} ou {dest:{src,updated,size}}
+        if(Array.isArray(man.items)){
+          files.forEach(f=>{
+            const m = man.items.find(x=>x.dest===f.name || x.path===f.path);
+            if(m){ f.updated=m.updated||m.time||null; f.size=m.size||f.size; f.source=m.src||m.source||null; }
+          });
+        }else{
+          files.forEach(f=>{
+            const m = man[f.name] || man[f.path];
+            if(m){ f.updated=m.updated||m.time||null; f.size=m.size||f.size; f.source=m.src||m.source||null; }
+          });
+        }
+      }
+    }catch(_){}
+    AFFIX_FILES = files;
+    return files;
+  }catch(e){
+    console.error("Affix index error:", e);
+    AFFIX_FILES = [];
+    return [];
+  }
+}
+
+function renderAffixList(q){
+  const out = $('#outSites');
+  const term = norm(q||"");
+  const files = (AFFIX_FILES||[]).filter(f => !term || norm(f.name).includes(term));
+  if(!files.length){
+    out.innerHTML = 'Nenhum PDF encontrado em <b>data/affix/raw</b> para esse filtro.';
+    return;
+  }
+  const parts = [];
+  parts.push(`Resultados: <b>${files.length}</b>${term?` • filtro: “${esc(q)}”`:""}\n`);
+  files.forEach((f,idx)=>{
+    const id = `pdf_${idx}`;
+    const meta = [
+      f.size ? `Tamanho: ${humanSize(f.size)}` : null,
+      f.updated ? `Atualizado: ${new Date(f.updated).toLocaleString()}` : null
+    ].filter(Boolean).join(" • ");
+    parts.push(
+`<div class="item">
+  <div class="pdf-row">
+    <b>${esc(f.name)}</b>
+    <div class="pdf-actions">
+      <a class="link" href="${f.url}" target="_blank" rel="noopener">Abrir</a>
+      <button class="link" data-prev="${id}" data-url="${f.url}">Prévia</button>
+      ${f.source? `<a class="link" href="${f.source}" target="_blank" rel="noopener">Origem</a>`:""}
+    </div>
+  </div>
+  <div class="hint" style="margin-top:4px">${meta || ""}</div>
+  <div id="${id}" class="preview"></div>
+</div>`
+    );
+  });
+  out.innerHTML = parts.join("\n");
+
+  // liga botões de prévia (carrega sob demanda)
+  $$('#outSites [data-prev]').forEach(btn=>{
+    btn.addEventListener('click', ()=>{
+      const tgt = document.getElementById(btn.dataset.prev);
+      if(!tgt) return;
+      const isOpen = tgt.style.display==="block";
+      if(isOpen){ tgt.style.display="none"; tgt.innerHTML=""; return; }
+      const viewer = "https://docs.google.com/gview?embedded=1&url=" + encodeURIComponent(btn.dataset.url);
+      tgt.innerHTML = `<iframe src="${viewer}"></iframe>`;
+      tgt.style.display = "block";
+    });
+  });
 }
 
 /* ======= APP ======= */
@@ -311,15 +410,31 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#alertBusy'),false); }
   });
 
-  /* SITES OFICIAIS */
+  /* SITES OFICIAIS + AFFIX PDFs */
   $('#btnSites')?.addEventListener('click', doSites);
   $('#qSites')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doSites(); });
   async function doSites(){
-    const q=($('#qSites').value||'').trim();
-    if(!q){ $('#outSites').textContent='Digite a pergunta.'; return; }
+    const q = ($('#qSites').value||'').trim();
+    // MODO 1: listar PDFs locais (vazio = todos; com texto = filtro)
+    if(!q || !q.toLowerCase().startsWith('web:')){
+      show($('#sitesBusy'),true);
+      $('#outSites').textContent='—';
+      try{
+        await loadAffixIndex();
+        renderAffixList(q);
+      }catch(e){
+        $('#outSites').textContent='Erro ao listar PDFs: '+e.message;
+      }finally{
+        show($('#sitesBusy'),false);
+      }
+      return;
+    }
+    // MODO 2: pesquisa via GAS (forçar com prefixo "web: ")
+    const realQ = q.replace(/^web:\s*/i,'');
+    if(!realQ){ $('#outSites').textContent='Digite a pergunta.'; return; }
     show($('#sitesBusy'),true); $('#outSites').textContent='—';
     try{
-      const qRich = q + " — FORMATO: responda em português com texto útil e liste as URLs oficiais no final. Substitua observações por: 'Fontes oficiais Affix, Alter, Hapvida'.";
+      const qRich = realQ + " — FORMATO: responda em português com texto útil e liste as URLs oficiais no final. Substitua observações por: 'Fontes oficiais Affix, Alter, Hapvida'.";
       const r = await call('chat',{q:qRich});
       const txt = (r && r.text) ? r.text : '—';
       const html = String(txt).replace(/(https?:\/\/[^\s]+)/g, m=>`<a href="${m}" target="_blank" rel="noopener">${m}</a>`);
@@ -328,7 +443,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }finally{ show($('#sitesBusy'),false); }
   }
 
-  /* CRION */
+  /* CRION (mantido) */
   $('#btnCRION')?.addEventListener('click', doCRION);
   $('#qCRION')?.addEventListener('keydown', e=>{ if(e.key==='Enter') doCRION(); });
   $('#btnReIdxCRION')?.addEventListener('click', async ()=>{
